feat: add pic to test
Signed-off-by: ZhangZijian <zhangzijian@chinatelecom.cn>

--- a/_posts/2019-02-17-test.md
+++ b/_posts/2019-02-17-test.md
@@ -12,4 +12,15 @@ tags: test
 
 正文
 
+<center>
+    <img src="./test.png">
+    <div style="color: orange; border-bottom: 1px solid #d9d9d9;
+        display: inline-block;
+        color: #999;
+        padding: 2px">
+        aOS运行场景
+    </div>
+</center>
 
+图片插入
+![](./test.png)
