--- a/_posts/2019-02-17-test.md
+++ b/_posts/2019-02-17-test.md
@@ -13,7 +13,7 @@ tags: test
 正文
 
 <center>
-    <img src="https://github.com/RichardZj/RichardZj.github.io/blob/741ac3cdc5de0ac9f9a382ed8cb7bb3c43d9a07b/_posts/test.png">
+    <img src="https://raw.githubusercontent.com/RichardZj/RichardZj.github.io/741ac3cdc5de0ac9f9a382ed8cb7bb3c43d9a07b/_posts/test.png">
     <div style="color: orange; border-bottom: 1px solid #d9d9d9;
         display: inline-block;
         color: #999;
@@ -23,4 +23,4 @@ tags: test
 </center>
 
 图片插入
-![](https://github.com/RichardZj/RichardZj.github.io/blob/741ac3cdc5de0ac9f9a382ed8cb7bb3c43d9a07b/_posts/test.png)
+![](https://raw.githubusercontent.com/RichardZj/RichardZj.github.io/741ac3cdc5de0ac9f9a382ed8cb7bb3c43d9a07b/_posts/test.png)
