--- a/_posts/2019-02-17-test.md
+++ b/_posts/2019-02-17-test.md
@@ -24,3 +24,6 @@ tags: test
 
 图片插入
 ![](https://raw.githubusercontent.com/RichardZj/RichardZj.github.io/741ac3cdc5de0ac9f9a382ed8cb7bb3c43d9a07b/_posts/test.png)
+
+图片插入2
+![](https://github.com/RichardZj/RichardZj.github.io/raw/33b3ea212b08d8735f6282b390ca6483ecc286a2/_posts/test.png)
