--- a/_posts/2019-02-17-test.md
+++ b/_posts/2019-02-17-test.md
@@ -27,3 +27,6 @@ tags: test
 
 图片插入2
 ![](https://github.com/RichardZj/RichardZj.github.io/raw/33b3ea212b08d8735f6282b390ca6483ecc286a2/_posts/test.png)
+
+图片插入3
+![](https://github.com/RichardZj/RichardZj.github.io/raw/33b3ea212b08d8735f6282b390ca6483ecc286a2/images/test.png)
