--- a/_posts/2019-02-17-test.md
+++ b/_posts/2019-02-17-test.md
@@ -30,3 +30,6 @@ tags: test
 
 图片插入3
 ![](https://github.com/RichardZj/RichardZj.github.io/raw/b620c011c8368af3534854b48b52e82578effc32/images/test.png)
+
+图片插入4
+![](https://github.com/RichardZj/RichardZj.github.io/raw/master/_posts/test.png)
